Add example instructions and configuration for using the job templates
Change-Id: I08b9ff5f030befb412070317d0f3341b6c732d36
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>